<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_action_ruppes"
            android:title="@string/expense" />
        <item
            android:id="@+id/nav_todolist"
            android:icon="@drawable/ic_action_todolist"
            android:title="@string/to_do_list" />
        <item
            android:id="@+id/nav_dates"
            android:icon="@drawable/ic_action_date"
            android:title="@string/dates" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_action_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_action_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
