<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="couplegoals.com.couplegoals.fragments.AddExpenseCategoriesFragment">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:elevation="10dp"
    android:id="@+id/cardViewAddExpenseCategories">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_expense_category"
            android:textStyle="bold"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etCategoryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category_name"
                    android:inputType="text"
                    android:layout_weight="1"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btSaveCategoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:elevation="10dp"
    android:id="@+id/cardViewyExpenseCategoriesList">
    <TextView
        android:id="@+id/textViewTotalExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_categories"/>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        android:id="@+id/cardViewCategories">
    <ListView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/listViewExpenseCategories">
    </ListView>
    </android.support.v7.widget.CardView>

</LinearLayout>
